# CS50W

./: README-main.md  README.md  app_original.py  application.py  db.sqlite3  flask variables.txt  movies.html  requirements.txt  resources.txt  text.py  todo.txt
Final_project/: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  todo.txt
Final_project/dramas/: asgi.py  settings.py  urls.py  wsgi.py
Final_project/mydramas/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py
Final_project/mydramas/static/css/: base.css  dashboard.css  newdrama.css
Final_project/mydramas/templates/mydramas/: dashboard.html  login.html  newdrama.html
Final_project/myscripts/: MDL.py  dbtest.xlsx  myinfo.xlsx
Final_project/staticfiles/: staticfiles.json
Final_project/staticfiles/css/: dramalist.css  login.cede1e46b8d7.css
Final_project/staticfiles/js/: newdrama.js
Project_0/: README.md  books.html  index.html  music.html
Project_1/: pyproject.toml  requirements.txt  run.py
Project_1/libreria/: __init__.py  books.db  forms.py  funcs.py  import.py  models.py
Project_1/libreria/static/styles/: base.css  book.css  index.css  logout.css  message.css  results-table.css  results.css  search.css
Project_1/libreria/templates/: 404.html  base.html  book.html  login.html  message.html  register.html  reviews.html  search.html
Project_2/: README.md  application.py  pyproject.toml
Project_2/static/: BSmod.css  index.css
Project_2/templates/: index.html
Project_3/: db.sqlite3  pyproject.toml  resources.txt
Project_3/orders/: admin.py  forms.py  views.py
Project_3/orders/migrations/: 0001_initial.py  0002_auto_20200206_1734.py  0004_auto_20200207_0951.py  0005_auto_20200207_0953.py  0007_auto_20200211_1411.py  0008_auto_20200211_1415.py  0009_menu_tops.py  0010_auto_20200212_2158.py  0012_auto_20200212_2321.py  0013_auto_20200216_1908.py  0015_auto_20200216_2246.py  0016_auto_20200216_2250.py  0017_order_created.py  0018_auto_20200217_0008.py
Project_3/orders/static/css/: base.css  cart.css  home.css  menu.css  users.css
Project_3/orders/static/js/: menu.js  myorders.js
Project_3/orders/templates/orders/: base.html  cart.html  home.html  menu.html  myorders.html
Project_3/pizza/: settings.py
Project_3/staticfiles/: staticfiles.json
Project_3/staticfiles/css/: base.1d783d5b9edb.css  home.d216b2302b16.css  menu.01c9d1f2c759.css
Project_3/users/: views.py
Project_3/users/templates/users/: login.html  logout.html  register.html
dramas/: settings.py  urls.py
libreria/: __init__.py  errors.py  forms.py  models.py  routes.py
mydramas/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
myscripts/: MDL.py  dbtest.xlsx  myinfo.xlsx
orders/: admin.py  (+4 more)
(+68 files in other folders)
