[tool.poetry]
name = "Flack"
version = "0.1.0"
description = ""
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
