[tool.poetry]
name = "Flack"
version = "0.1.0"
description = ""
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.1"
Flask = "^1.1.2"
Flask-SocketIO = "^5.0.1"
gunicorn = "^20.0.4"
eventlet = "^0.30.1"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
