[tool.poetry]
name = "Pizza"
version = "0.1.0"
description = ""
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django-crispy-forms = "^1.11.0"
Django = "^3.1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
